// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render loader 1`] = `
<div
  class="spinner"
  style="width:40px;height:40px"
>
  <div
    class="doubleBounce1"
  />
  <div
    class="doubleBounce2"
  />
</div>
`;

exports[`Render loader with additional classname 1`] = `
<div
  class="spinner test"
  style="width:40px;height:40px"
>
  <div
    class="doubleBounce1"
  />
  <div
    class="doubleBounce2"
  />
</div>
`;

exports[`Render loader with other dimensions 1`] = `
<div
  class="spinner"
  style="width:50px;height:50px"
>
  <div
    class="doubleBounce1"
  />
  <div
    class="doubleBounce2"
  />
</div>
`;
